--- a/src/myweb.mxml
+++ b/src/myweb.mxml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
-					   xmlns:mx="library://ns.adobe.com/flex/mx">
+					   xmlns:mx="library://ns.adobe.com/flex/mx" 
+					   xmlns:controls="org.myjerry.myweb.controls.*"
+					   initialize="onInit();">
+	<fx:Script>
+		<![CDATA[
+			import org.myjerry.myweb.views.HomePageView;
+			
+			protected function onInit():void {
+				this.myViewStack.push(new HomePageView());
+			}
+		]]>
+	</fx:Script>
 	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<controls:ViewStack id="myViewStack" width="100%" height="100%" />
 	
 </s:WindowedApplication>
