Added code to create/open the project database file.

--- a/src/org/myjerry/myweb/views/CreateProjectView.mxml
+++ b/src/org/myjerry/myweb/views/CreateProjectView.mxml
@@ -37,6 +37,7 @@
 				}
 				
 				Project.createNewProject(this.projectName.text, this.folder.text);
+				ApplicationContext.removeView(this);
 			}
 			
 			protected function browseForFolder():void {
