--- a/src/org/myjerry/myweb/views/HomePageView.mxml
+++ b/src/org/myjerry/myweb/views/HomePageView.mxml
@@ -8,6 +8,7 @@
 		<![CDATA[
 			import mx.core.FlexGlobals;
 			
+			import org.myjerry.as3extensions.io.FileChooser;
 			import org.myjerry.myweb.ApplicationContext;
 			import org.myjerry.myweb.model.Project;
 			
@@ -16,7 +17,11 @@
 			}
 			
 			private function openProject():void {
-				
+				new FileChooser('Choose the project file...', fileChosen).choose();
+			}
+			
+			private function fileChosen(file:File):void {
+				Project.openProject(file);
 			}
 		]]>
 	</fx:Script>
