--- a/src/myweb.mxml
+++ b/src/myweb.mxml
@@ -3,7 +3,8 @@
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
 					   xmlns:mx="library://ns.adobe.com/flex/mx" 
 					   xmlns:controls="org.myjerry.myweb.controls.*"
-					   initialize="onInit();">
+					   initialize="onInit();"
+					   width="740" height="600">
 	<fx:Script>
 		<![CDATA[
 			import org.myjerry.myweb.views.HomePageView;
