--- a/src/org/myjerry/myweb/views/SiteHomeView.mxml
+++ b/src/org/myjerry/myweb/views/SiteHomeView.mxml
@@ -14,15 +14,20 @@
 		<![CDATA[
 			import org.myjerry.myweb.ApplicationContext;
 			
-			protected function closeProject():void {
-				ApplicationContext.project.closeProject();
+			protected function closeSite():void {
+				ApplicationContext.site.closeSite();
 			}
 		]]>
 	</fx:Script>
 	
+	<s:HGroup width="100%" height="100%">
+		<s:List width="200" id="tabList" />
+		<s:SkinnableContainer width="100%" height="100%" />
+	</s:HGroup>
+	
 	<s:HGroup width="100%">
 		<s:Spacer width="100%" />
 		
-		<s:Button label="Close" click="closeProject();" />
+		<s:Button label="Close" click="closeSite();" />
 	</s:HGroup>
 </s:Group>
