--- a/src/myweb.mxml
+++ b/src/myweb.mxml
@@ -19,6 +19,10 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
+	<s:layout>
+		<s:VerticalLayout paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" />
+	</s:layout>
+	
 	<controls:ViewStack id="myViewStack" width="100%" height="100%" />
 	
 </s:WindowedApplication>
