--- a/src/org/myjerry/myweb/views/SiteHomeView.mxml
+++ b/src/org/myjerry/myweb/views/SiteHomeView.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:views="org.myjerry.myweb.views.*">
 	<s:layout>
 		<s:VerticalLayout/>
 	</s:layout>
@@ -20,10 +20,23 @@
 		]]>
 	</fx:Script>
 	
-	<s:HGroup width="100%" height="100%">
-		<s:List width="200" id="tabList" />
-		<s:SkinnableContainer width="100%" height="100%" />
+	<s:HGroup width="80%">
+		<s:TabBar id="tabBar" width="100%" dataProvider="{this.viewStack}" />
 	</s:HGroup>
+	
+	<mx:ViewStack id="viewStack" width="100%" height="100%" >
+
+		<views:TemplateView />
+		
+		<views:ProjectView />
+		
+		<views:PagesView />
+		
+		<views:BuildsView />
+		
+	</mx:ViewStack>
+	
+	<s:Spacer height="20" />
 	
 	<s:HGroup width="100%">
 		<s:Spacer width="100%" />
