--- a/src/org/myjerry/myweb/views/SiteHomeView.mxml
+++ b/src/org/myjerry/myweb/views/SiteHomeView.mxml
@@ -25,6 +25,8 @@
 	</s:HGroup>
 	
 	<mx:ViewStack id="viewStack" width="100%" height="100%" >
+		
+		<views:SiteDetailsView />
 
 		<views:TemplateView />
 		
@@ -33,6 +35,8 @@
 		<views:PagesView />
 		
 		<views:BuildsView />
+		
+		<views:AnalyticsView />
 		
 	</mx:ViewStack>
 	
