--- a/src/org/myjerry/myweb/views/AnalyticsView.mxml
+++ b/src/org/myjerry/myweb/views/AnalyticsView.mxml
@@ -4,7 +4,18 @@
 					xmlns:mx="library://ns.adobe.com/flex/mx" 
 					width="100%" height="100%"
 					label="Analytics">
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<s:Form width="100%" height="100%">
+		<s:FormHeading label="Configure Site Analytics" />
+		
+		<s:FormItem label="Google Analytics Web Property ID" >
+			<s:TextInput id="googleAnalyticsID" />
+		</s:FormItem>
+		
+	</s:Form>
+	
 </s:NavigatorContent>
