--- a/src/org/myjerry/myweb/views/PagesView.mxml
+++ b/src/org/myjerry/myweb/views/PagesView.mxml
@@ -9,4 +9,60 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayList;
+			
+			import org.myjerry.myweb.ApplicationContext;
+			
+			protected const pages:ArrayList = new ArrayList();
+			
+			override protected function initializationComplete():void {
+				super.initializationComplete();
+				
+				loadAllPages();
+			}
+			
+			protected function loadAllPages():void {
+				var temp:ArrayList = ApplicationContext.site.pageService.getAllPages();
+				pages.removeAll();
+				pages.addAll(temp);
+			}
+			
+			protected function editPage():void {
+				
+			}
+			
+			protected function clonePage():void {
+				
+			}
+			
+			protected function newPage():void {
+				ApplicationContext.pushView(new PageDetailsView());
+			}
+			
+			protected function editPageContent():void {
+				
+			}
+		]]>
+	</fx:Script>
+	
+	<s:layout>
+		<s:VerticalLayout />
+	</s:layout>
+	
+	<s:List width="100%" height="100%" id="pageList" dataProvider="{this.pages}" />
+	
+	<s:HGroup width="100%">
+		<s:Spacer width="100%" />
+		
+		<s:Button label="New Page" click="newPage()" />
+		
+		<s:Button label="Edit Details" click="editPage()" />
+		
+		<s:Button label="Edit Content" click="editPageContent()" />
+		
+		<s:Button label="Clone" click="clonePage()" />
+	</s:HGroup>
+	
 </s:NavigatorContent>
