--- a/src/org/myjerry/myweb/views/ProjectView.mxml
+++ b/src/org/myjerry/myweb/views/ProjectView.mxml
@@ -30,7 +30,7 @@
 			}
 			
 			protected function loadAllProjects():void {
-				var proj:ArrayList = ApplicationContext.site.projectService.getAllProjects();
+				var proj:ArrayList = ApplicationContext.projectService.getAllProjects();
 				this.projects.removeAll();
 				this.projects.addAll(proj);
 				
@@ -80,7 +80,7 @@
 				project.description = this.description.text;
 				project.summary = this.summary.text;
 				
-				var rowID:Number = ApplicationContext.site.projectService.saveProject(project);
+				var rowID:Number = ApplicationContext.projectService.saveProject(project);
 				project.projectID = rowID;
 				this.currentlyLoadedProject = project;
 
@@ -89,7 +89,7 @@
 			
 			protected function deleteProject():void {
 				var chosen:Project = this.projectList.selectedItem as Project;
-				ApplicationContext.site.projectService.deleteProject(chosen.projectID);
+				ApplicationContext.projectService.deleteProject(chosen.projectID);
 				
 				this.currentlyLoadedProject = null;
 				
